# llamacpypy-old

./: CMakeLists.txt  LICENSE  Makefile  README.md  inference.cpp  pyproject.toml  utils.h
src/: inference.cpp  inference.h
src/llamacpypy/: __init__.py  llama.py
